--- a/templates/home.html
+++ b/templates/home.html
@@ -8,19 +8,32 @@
 	<div class="container">
 		<div class="jumbotron text-center">
 			<h1>Matchify</h1>
-			<p><i>This is gonna be sick</i></p>
+			<p><i>Love at first sound</i></p>
 		</div>
 	</div>
 	<div class="container">
-        	<form class="centered" action="login">
+
+		<input class="btn btn-primary form-control" id="Login" type="button" value="Login">
+		<div style="margin-top:15px"></div>
+		<input class="btn btn-primary form-control" id="Create" type="button" value="Create an account">
+
+
+        	<!--<form class="centered" action="login">
                 	<input class="btn btn-primary form-control" type="submit" value="Login">
         	</form>
         	<br>
         	<form class="centered" action="createAccount">
                 	<input class="btn btn-primary form-control" type="submit" value="Create an account">
-        	</form>
+        	</form>-->
 		
 	</div>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+	<script>
+		function changeDisplay(id){
+			
+		}
+	</script>
 </body>
 </html>
 
