Adding new stuff

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,17 @@
 <!Doctype HTML>
+{% include "header.html" %}
+<html>
 <head>
-        <title>Matchify</title>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <title>Matchify</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+	<meta name ="viewport" content="width=device-width, initial-scale =1">	
+</head>
 
 <style type = "text/css">
-	body { background: #242323 !important; }
+	body { 
+		background: #242323 !important;
+		
+	 }
 
  
 	.jumbotron-top {
@@ -24,45 +31,26 @@
 		color: rgba(255,255,255,1);
 		
 	}
-	
 
 	
+	h1 {
+		color: #1ED760;
+	}
+
+	.container{
+		height: 100%;
+		width: 100%;
+	}
 </style>
-
-<meta name ="viewport" content="width=device-width, initial-scale =1">	
-</head>
 <body>
-
-		<div class="jumbotron-top text-center">
-			<div class="jumbotron-custom-inner ">
-				<div class ="display-3">
-					<p>MATCHIFY</p>
-					<h4>Some slogan here</h4>
-				</div>
-
-			</div>
-		</div>
-	
-
+	<br><br><br><br>
+	<h1 class="center">TEST</h1>
+	<br><br><br><br>
 	<div class="container">
-        	<form class="centered" action="login">
-                	<input class="btn btn-success form-control" type="submit" value="Login to Matchify">
-
-        	</form>
-
-		<br>
+		
 		<form class="centered" action="/auth">
-                	<input class="btn btn-success form-control" type="submit" value="Login to Spotify">
-
-        	</form>
-
-
-
-        	<br>
-        	<form class="centered" action="createAccount">
-                	<input class="btn btn-success form-control" type="submit" value="Create an account">
-        	</form>
-		<br><br><br><br><br>
+            <input class="btn btn-success form-control" type="submit" value="Login to Spotify">
+        </form>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 	<script>
