--- a/templates/matches.html
+++ b/templates/matches.html
@@ -1,3 +1,68 @@
 <!Doctype HTML>
 {% include "header.html" %}
-<html></html>
+<html>
+    <head>
+        <title>Matchify</title>
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+        <meta name ="viewport" content="width=device-width, initial-scale =1">	
+    </head>
+    
+    <style type = "text/css">
+        table {
+            border-collapse: collapse;
+        }
+
+        table, th, td {
+            border: 10px solid #FC3975;
+            color: #1ED760;
+            table-layout: fixed;
+            width: 90%;
+            height: 240px
+            
+        }
+
+        th{
+            text-align: center;
+            vertical-align: middle;
+            font-size: 120px;
+        }
+
+        td.name, td.bio{
+            font-size: 75px;
+            text-align: center;
+            vertical-align: middle;
+        }
+        td.pic{
+            text-align: center;
+        }
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 50%;
+        }
+    </style>
+
+    <body>
+        <br><br><br><br><br><br><br>
+        <table class= "one" align ="center" id="matches">
+            <tr id = "0">
+                <th>Matches Name</th>
+                <th>Matches Bio</th>
+                <th>Matchify Score</th>
+            </tr>
+            {% for item in items%}
+            <tr id ="1">
+                <td class ="name"></td>
+                <td class = "bio" ></td>
+                <td class = "pic"><img src = "/static/images/matchify100.png"></td>
+            </tr>
+            {% endfor %}
+        </table>
+
+        <script>
+            funtion getPic()
+        </script>
+    </body>
+
+</html>
