--- a/templates/home.html
+++ b/templates/home.html
@@ -35,6 +35,20 @@
 	
 	h1 {
 		color: #1ED760;
+		font-size: 125px;
+		text-shadow: 0 1px 0 #ccc,
+               0 2px 0 #c9c9c9,
+               0 3px 0 #bbb,
+               0 4px 0 #b9b9b9,
+               0 5px 0 #aaa,
+               0 6px 1px rgba(0,0,0,.1),
+               0 0 5px rgba(0,0,0,.1),
+               0 1px 3px rgba(0,0,0,.3),
+               0 3px 5px rgba(0,0,0,.2),
+               0 5px 10px rgba(0,0,0,.25),
+               0 10px 10px rgba(0,0,0,.2),
+               0 20px 20px rgba(0,0,0,.15);
+		
 	}
 
 	.container{
@@ -44,7 +58,7 @@
 </style>
 <body>
 	<br><br><br><br>
-	<h1 class="center">TEST</h1>
+	<h1 style="text-align:center">Love at first sound</h1>
 	<br><br><br><br>
 	<div class="container">
 		
