--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@
 	
 	h1 {
 		color: #1ED760;
-		font-size: 125px;
+		font-size: 500%;
 		text-shadow: 0 1px 0 #ccc,
                0 2px 0 #c9c9c9,
                0 3px 0 #bbb,
