changed some stuff'

--- a/templates/accountInfo.html
+++ b/templates/accountInfo.html
@@ -41,6 +41,7 @@
     border-color: white;
     background-color: black;
     color: #1ED760;
+    size: 100%;
   }
 
 	h1 {
@@ -57,13 +58,13 @@
 	<br><br><br><br>
 	<div class="container">
     <form action="" method="post">
-      <label for="field1"><span><font color="#1ED760">Name:*</font><span class="boxes"></span></span><input type="text" class="boxes" name="name" /></label>
+      <label for="field1"><span><font color="#1ED760" size=100%>Name:* </font><span class="boxes"></span></span><input type="text" class="boxes" name="name" /></label>
       <br>
       <br>
-      <label for="field2"><span><font color="#1ED760">Email:*</font><span class="boxes"></span></span><input type="text" class="boxes" name="email" /></label>
+      <label for="field2"><span><font color="#1ED760" size=100%>Email:* </font><span class="boxes"></span></span><input type="text" class="boxes" name="email" /></label>
       <br>
       <br>
-      <label><span><font color="#1ED760">Phone Number:*</font><span class="boxes"></span></span><input type="text" class="boxes" name="number" /></label>
+      <label><span><font color="#1ED760" size=100%>Phone Number:* </font><span class="boxes"></span></span><input type="text" class="boxes" name="number" /></label>
       <br>
       <br>
       <font color="#1ED760">Gender</font>
