--- a/templates/header.html
+++ b/templates/header.html
@@ -1,7 +1,7 @@
 <!Doctype HTML>
 <html>
 <style>
-body { 
+body {
     width: 100vw;
     height: 30vh;
     background: #242323 !important;
@@ -9,7 +9,7 @@ body {
     border-bottom-style: solid;
     }
 
-   
+
 .myNavBar{
     width: 100%;
     height: 100%;
@@ -22,7 +22,7 @@ body {
     position: relative;
     z-index: 1;
 
-    
+
 }
 .picture{
     position: absolute;
@@ -57,7 +57,7 @@ body {
   width: 33.33%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
   text-align: center; /* If you want the text to be centered */
   padding-top: 10px;
-  padding-bottom: 10px
+  padding-bottom: 10%;
 }
 
 
@@ -71,6 +71,7 @@ body {
 .bar{
     position:relative;
     padding-top: 10px;
+
 }
 
 
@@ -97,10 +98,10 @@ body {
                     <div class = "bar">
                             <a href="/home" style="color:#1ED760">Home</a>
                             <a href='/matches' style='color:#1ED760'>Matches</a>
-                            <a href='/accountInfo' style='color:#1ED760'>Account Info</a>      
+                            <a href='/accountInfo' style='color:#1ED760'>Account Info</a>
                     </div>
                 </div>
-            </div> 
+            </div>
         </div>
     </div>
 </body>
