--- a/templates/accountInfo.html
+++ b/templates/accountInfo.html
@@ -4,6 +4,7 @@
 <head>
     <title>Matchify</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 	<meta name ="viewport" content="width=device-width, initial-scale =1">
 </head>
 
@@ -54,38 +55,104 @@
 	}
 </style>
 <body>
-	<br><br><br><br>
-	<br><br><br><br>
-	<div class="container">
-    <form action="" method="post">
-      <label for="field1"><span><font color="#1ED760" size=100%>Name:* </font><span class="boxes"></span></span><input type="text" class="boxes" name="name" /></label>
+  <div style="padding-top:15px;"></div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <form class="centered" action="/updateAccountData">
+          <input id="refresh" onclick="refreshPage()" class="btn btn-success form-control" type="button" value="Refresh Spotify Data">
+          <div id="loader" class="loader" style="display:none;margin-left:auto;margin-right:auto;"></div>
+      </form>
+    </div>
+  </div>
+  <form action="" method="post">
+  <div class="row">
+    <div class="col-lg-3">
+    </div>
+    <div class="col-lg-3">
+        <label for="field1">
+          <span><font color="#1ED760" size=100%>Name:</font><span class="boxes"></span></span><input required value="{{AccountInfo.name}}" type="text" class="boxes form-control" name="name" />
+        </label>
+    </div>
+    <div class="col-lg-3">
+      <label>
+        <span><font color="#1ED760" size=100%>Age:</font><span class="boxes"></span></span><input required value="{{AccountInfo.age}}" type="number" min="18" max="140" class="boxes form-control" name="age" />
+      </label>
+    </div>
+  </div>
+  <div style="padding-top:15px"></div>
+  <div class="row">
+    <div class="col-lg-3">
+    </div>
+    <div class="col-lg-3">
+      <label for="field2">
+        <span><font color="#1ED760" size=100%>Email:</font><span class="boxes"></span></span><input required value="{{AccountInfo.email}}" type="email" class="boxes form-control" name="email" />
+      </label>
+    </div>
+    <div class="col-lg-3">
+      <label>
+        <span><font color="#1ED760" size=100%>Phone #:</font><span class="boxes"></span></span><input required value="{{AccountInfo.phone}}" type="tel" pattern="[0-9]{10}" class="boxes form-control" name="number" />
+      </label>
+    </div>
+  </div>
+  <div style="padding-top:15px"></div>
+  <div class="row">
+    <div class="col-lg-3">
+    </div>
+    <div class="col-lg-3">
+      <label>
+      <font color="#1ED760" size=100%>Sex:</font>
+      </label>
       <br>
+      {% if AccountInfo.gender == "male" %}
+      <input required type="radio" name="gender" value="male" checked="checked"> <font color="#1ED760">Male</font><br>
+      <input required type="radio" name="gender" value="female"> <font color="#1ED760">Female</font><br>
+      {% elif AccountInfo.gender == "female" %}
+      <input required type="radio" name="gender" value="male"> <font color="#1ED760">Male</font><br>
+      <input required type="radio" name="gender" value="female" checked="checked"> <font color="#1ED760">Female</font><br>
+      {% else %}
+      <input required type="radio" name="gender" value="male"> <font color="#1ED760">Male</font><br>
+      <input required type="radio" name="gender" value="female" > <font color="#1ED760">Female</font><br>
+      {% endif %}
+    </div>
+    <div class="col-lg-3">
+      <label>
+      <font color="#1ED760" size=100%>Preference:</font>
+      </label>
       <br>
-      <label for="field2"><span><font color="#1ED760" size=100%>Email:* </font><span class="boxes"></span></span><input type="text" class="boxes" name="email" /></label>
-      <br>
-      <br>
-      <label><span><font color="#1ED760" size=100%>Phone Number:* </font><span class="boxes"></span></span><input type="text" class="boxes" name="number" /></label>
-      <br>
-      <br>
-      <font color="#1ED760">Gender</font>
-      <br>
-      <input type="radio" name="gender" value="male"><font color="#1ED760">Male</font><br>
-      <input type="radio" name="gender" value="female" ><font color="#1ED760">Female</font><br>
-      <br>
-      <font color="#1ED760">Preference</font>
-      <br>
-      <input type="radio" name="preference" value="male"><font color="#1ED760">Male</font><br>
-      <input type="radio" name="preference" value="female" ><font color="#1ED760">Female</font><br>
-      <input type="radio" name="preference" value="both"> <font color="#1ED760">Both</font><br>
-      <br>
+      <input required type="radio" name="preference" value="male" {% if AccountInfo.preference == "male" %}checked="checked"{% endif %}> <font color="#1ED760">Male</font><br>
+      <input required type="radio" name="preference" value="female" {% if AccountInfo.preference == "female" %}checked="checked"{% endif %}> <font color="#1ED760">Female</font><br>
+      <input required type="radio" name="preference" value="both" {% if AccountInfo.preference == "both" %}checked="checked"{% endif %}> <font color="#1ED760">Both</font><br>
+    </div>
+  </div>
+  <div style="padding-top:15px"></div>
+  <div class="row">
+    <div class="col-lg-3">
+    </div>
+    <div class="col-lg-6">
+      <label>
+      <font color="#1ED760" size=100%>About Me:</font>
+      </label>
+      <textarea type="text" name="bio" class="form-control" required>{{AccountInfo.bio}}</textarea>
+    </div>
+  </div>
+  <div style="padding-top:30px"></div>
+  <div class="row">
+    <div class="col-lg-3">
+    </div>
+    <div class="col-lg-6">
       <input type="submit" class="btn btn-success form-control" value="Submit">
+    </div>
+  </div>
   </form>
-	</div>
+  <div style="padding-top:15px;"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-	<script>
-		function changeDisplay(id){
-
-		}
-	</script>
+  <script>
+    function refreshPage(){
+      document.getElementById("refresh").style.display = "none";
+      document.getElementById("loader").style.display = "block";
+      window.location = "/updateAccountData";
+    }
+  </script>
 </body>
 </html>
