--- a/templates/header.html
+++ b/templates/header.html
@@ -1,89 +1,11 @@
 <!Doctype HTML>
 <html>
-<style>
-body {
-    width: 100vw;
-    height: 30vh;
-    background: #242323 !important;
-    border-color: #1ED760;
-    border-bottom-style: solid;
-    }
-
-
-.myNavBar{
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-.topHalf{
-    width: 100%;
-    height: 66.6%;
-    position: relative;
-    z-index: 1;
-
-
-}
-.picture{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    margin-left: 33%;
-    margin-right: 0px;
-    margin-top: 0%;
-    padding:0;
-    background-image:url('/static/images/matchifyWord.png');
-    background-repeat: no-repeat;
-    padding-bottom: 100px;
-    top: -120px;
-}
-.offsetPic{
-   padding-top: 7vh;
-    width: 75%;
-    height: auto;
-}
-
-.bottomHalf{
-    width: 100%;
-    height: 33.3%;
-    position: relative;
-}
-
-.bottomHalf a {
-  float: left;
-  padding: 0px;
-  text-decoration: none;
-  font-size: 90%;
-  width: 33.33%; /* Four equal-width links. If you have two links, use 50%, and 33.33% for three links, etc.. */
-  text-align: center; /* If you want the text to be centered */
-  padding-top: 10px;
-  padding-bottom: 10%;
-}
-
-
-.center {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  width: 50%;
-}
-
-.bar{
-    position:relative;
-    padding-top: 10px;
-
-}
-
-
-
-</style>
 <head>
-
-
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 
 <body>
-    <div class="myNavBar">
+    <!--<div class="myNavBar">
         <div class ="topHalf">
             <div class = "center">
                 <a href = "/home">
@@ -98,12 +20,52 @@ body {
                     <div class = "bar">
                             <a href="/home" style="color:#1ED760">Home</a>
                             <a href='/matches' style='color:#1ED760'>Matches</a>
-                            <a href='/accountInfo' style='color:#1ED760'>Account Info</a>
+                            <a href='/updateAccountInfo' style='color:#1ED760'>Account Info</a>
                     </div>
                 </div>
             </div>
         </div>
+    </div>-->
+    <div class="bg-dark">
+      <div style="width:100%;text-align:center;padding:15px;">
+        <a class="" href="/"><img style="width:500px" src="/static/images/matchifyWord2.png"></a>
+      </div>
     </div>
+    <div class="bg-dark">
+      <h1 style="text-align:center;margin:0;margin-top:-30px;padding-bottom:20px">Love at first sound</h1>
+    </div>
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark justify-content-center">
+      <!-- Brand/logo -->
+
+      <!-- Links -->
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="/home">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/matches">Matches</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/updateAccountInfo">Account Info</a>
+        </li>
+        <li class="nav-item">
+          <form id="logout" class="centered" action="/logout">
+            <input class="btn btn-success form-control" onclick="logout()" type="button" value="Logout from Spotify">
+          </form>
+        </li>
+      </ul>
+
+    </nav>
+    <script>
+    function logout(){
+      const url = 'https://accounts.spotify.com/en/logout';
+      const spotifyLogoutWindow = window.open(url, 'Spotify Logout', 'width=700,height=500,top=40,left=40');
+      setTimeout(function(){
+        spotifyLogoutWindow.close();
+        window.location = "/logout";
+      }, 1000);
+    }
+  	</script>
 </body>
 
 </html>
