--- a/templates/matches.html
+++ b/templates/matches.html
@@ -31,14 +31,22 @@
                   <th>Matchify Score</th>
                   <th>More Information</th>
               </tr>
-
-              <tr id ="1">
+              <!--<tr id ="1">
                   <td>Photo</td>
                   <td>Beau Cross</td>
                   <td><img src="/static/images/matchify2100.png" width=32px></td>
                   <td><a href="/account?id=" class="expandAcc" style="padding:15px;"><img src="/static/img/more.png" width=32px></td></a>
+              </tr>-->
+	      {% for match in yourMatches %}
+	      {% if match.score > 0 %}
+	      <tr id ="1">
+                  <td>Photo</td>
+                  <td>{{match.name}}</td>
+                  <td><div style=""><img style="height:{% if (match.score/6*32) > 32 %}32{% else %}{{match.score /6 * 32}}{% endif %}px;object-fit:cover;object-position:bottom;" src="/static/images/matchify2100.png" width=32px></div></td>
+                  <td><a href="/account?id={{match.id}}" class="expandAcc" style="padding:15px;"><img src="/static/img/more.png" width=32px></td></a>
               </tr>
-
+	      {% endif %}
+	      {% endfor %}
           </table>
         </div>
       </div>
