--- a/templates/accountInfo.html
+++ b/templates/accountInfo.html
@@ -60,9 +60,18 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <form class="centered" action="/updateAccountData">
-          <input id="refresh" onclick="refreshPage()" class="btn btn-success form-control" type="button" value="Refresh Spotify Data">
+          <input id="refresh" onclick="refreshPage()" class="btn btn-dark form-control" type="button" value="Refresh Spotify Data">
           <div id="loader" class="loader" style="display:none;margin-left:auto;margin-right:auto;"></div>
       </form>
+    </div>
+  </div>
+  <form action="/updateAccountInfo" method='POST'>
+  <div style="padding-top:15px"></div>
+  <div class="row">
+    <div class="col-lg-3">
+    </div>
+    <div class="col-lg-6">
+	  <input type="submit" class="btn btn-success form-control" value="Update Personal Information">    	
     </div>
   </div>
   <form action="" method="post">
@@ -117,11 +126,11 @@
     </div>
     <div class="col-lg-3">
       <label>
-      <font color="#1ED760" size=100%>Preference:</font>
+      <font color="#1ED760" size=100%>Looking For:</font>
       </label>
       <br>
-      <input required type="radio" name="preference" value="male" {% if AccountInfo.preference == "male" %}checked="checked"{% endif %}> <font color="#1ED760">Male</font><br>
-      <input required type="radio" name="preference" value="female" {% if AccountInfo.preference == "female" %}checked="checked"{% endif %}> <font color="#1ED760">Female</font><br>
+      <input required type="radio" name="preference" value="male" {% if AccountInfo.preference == "male" %}checked="checked"{% endif %}> <font color="#1ED760">Males</font><br>
+      <input required type="radio" name="preference" value="female" {% if AccountInfo.preference == "female" %}checked="checked"{% endif %}> <font color="#1ED760">Females</font><br>
       <input required type="radio" name="preference" value="both" {% if AccountInfo.preference == "both" %}checked="checked"{% endif %}> <font color="#1ED760">Both</font><br>
     </div>
   </div>
@@ -136,15 +145,8 @@
       <textarea type="text" name="bio" class="form-control" required>{{AccountInfo.bio}}</textarea>
     </div>
   </div>
-  <div style="padding-top:30px"></div>
-  <div class="row">
-    <div class="col-lg-3">
-    </div>
-    <div class="col-lg-6">
-      <input type="submit" class="btn btn-success form-control" value="Submit">
-    </div>
-  </div>
   </form>
+  <div style="padding-top:30px"></div>
   <div style="padding-top:15px;"></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script>
