Now it should be working for no hard code

--- a/templates/account.html
+++ b/templates/account.html
@@ -87,7 +87,7 @@
           <font color="#1ED760" size=100%>Matchify Score:</font>
       </label>
       <br>
-      34521
+      {{dataMatch.score}}
     </div>
   </div>
   {% if Matched == 2 %}
