--- a/templates/account.html
+++ b/templates/account.html
@@ -117,6 +117,16 @@
     <div class="col-md-3"></div>
     <div class="col-md-6">
       <label for="field1">
+          <font color="#1ED760" size=100%>Keywords you matched with:</font>
+      </label>
+      <br>
+      <div style="font-size:32px">{{dataMatch.keywords}}</div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+      <label for="field1">
           <font color="#1ED760" size=100%>Bio:</font>
       </label>
       <br>
