--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
             <th>Art</th>
             <th>Track</th>
             <th>Artist(s)</th>
-            <th>Populatrity</th>
+            <th>Popularity</th>
           </tr>
         </thead>
         <tbody>
@@ -47,7 +47,7 @@
             <th>Art</th>
             <th>Artist</th>
             <th>Genre(s)</th>
-            <th>Populatrity</th>
+            <th>Popularity</th>
           </tr>
         </thead>
         <tbody>
